--- a/client/src/index.css
+++ b/client/src/index.css
@@ -127,6 +127,18 @@
       hsl(var(--accent)) 100%
     );
   }
+  .custom-scroll::-webkit-scrollbar {
+  width: 6px;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb {
+  background-color: #3b82f6;
+  border-radius: 8px;
+}
+
+.dark .custom-scroll::-webkit-scrollbar-thumb {
+  background-color: #60a5fa;
+}
   .normalColor{
     color: var(--primary);
   }
